--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,6 +93,8 @@ select::-ms-expand {
   opacity: 0.85;
   transform: scale(0.7);
   transform-origin: 0, 0;
+  line-height: 1;
+  font-weight: 400;
 }
 
 /* Topページの見出し */
@@ -129,6 +131,58 @@ select::-ms-expand {
 .top-page_desc {
   font-size: 12px;
   margin-top: 40px;
+}
+
+/* 下層ページの見出し */
+.page-heading {
+  font-size: 16px;
+  margin-top: 55px;
+  letter-spacing: 0.1em;
+  line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* 下層ページのリード文 */
+.page-lead {
+  font-size: 12px;
+  max-width: 600px;
+  margin: 40px auto 0;
+}
+
+/* パンクズ */
+.breadcrumbs {
+  margin-top: 20px;
+}
+.breadcrumbs__inner {
+  display: flex;
+  justify-content: flex-end;
+}
+.breadcrumbs__item {
+  margin-left: 10px;
+  letter-spacing: 0.2em;
+  font-size: 10px;
+  transform: scale(0.8);
+  font-weight: 700;
+}
+.breadcrumbs__item.--light {
+  color: #7B7B7B;
+}
+.breadcrumbs__arrow::after {
+  content: "";
+  display: inline-block;
+  position: relative;
+  top: -1px;
+  width: 4px;
+  height: 4px;
+  border-top: 1px solid #707070;
+  border-right: 1px solid #707070;
+  transform: rotate(45deg);
+}
+
+.page-mv {
+  margin-left: calc(50% - 50vw);
 }
 
 /* 画像の注釈 */
@@ -243,6 +297,10 @@ section {
   padding: 50px 0;
 }
 
+.mt10 {
+  margin-top: 10px;
+}
+
 .mt40 {
   margin-top: 40px;
 }
@@ -286,12 +344,14 @@ section {
   .jp {
     font-size: 11px;
     transform: scale(1);
-    margin-left: 10px;
   }
   /* Topページの見出し */
   .top-page-heading {
     font-size: 17px;
     padding-bottom: 18px;
+  }
+  .top-page-heading .jp {
+    margin-left: 10px;
   }
   /* Topページの見出しの下のheading */
   .sub-heading {
@@ -302,6 +362,30 @@ section {
   .top-page_desc {
     font-size: 15px;
     margin-top: 45px;
+  }
+  /* 下層ページの見出し */
+  .page-heading {
+    font-size: 22px;
+    margin-top: 50px;
+  }
+  /* 下層ページのリード文 */
+  .page-lead {
+    font-size: 16px;
+  }
+  /* パンクズ */
+  .breadcrumbs {
+    margin-top: 30px;
+  }
+  .breadcrumbs__item {
+    margin-left: 20px;
+    letter-spacing: 0.1em;
+    font-size: 11px;
+    transform: scale(1);
+  }
+  .breadcrumbs__arrow::after {
+    top: -1px;
+    width: 5px;
+    height: 5px;
   }
   /* 画像の注釈 */
   .image-desc {
@@ -411,7 +495,7 @@ section {
 
 @media (min-width: 765px) {
   .header__wrap {
-    padding: 50px 70px 0;
+    padding: 50px 70px;
   }
   .menu {
     width: auto;
@@ -704,14 +788,14 @@ section {
 }
 /* Hover Event */
 /* -------------------------------------------- */
-/* top-cta */
+/* cta */
 /* -------------------------------------------- */
-.top-cta__image {
+.cta__image {
   width: 58%;
   display: block;
   margin: 0 auto;
 }
-.top-cta__image img {
+.cta__image img {
   width: 100%;
 }
 
@@ -725,11 +809,11 @@ section {
 }
 
 @media (min-width: 765px) {
-  .top-cta {
+  .cta {
     max-width: 708px;
     margin: 0 auto;
   }
-  .top-cta__image {
+  .cta__image {
     width: 100%;
   }
   .btn-cont {
