--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -106,6 +106,8 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
   opacity: 0.85;
   transform: scale(0.7);
   transform-origin: 0,0;
+  line-height: 1;
+  font-weight: 400;
 }
 
 /* Topページの見出し */
@@ -145,6 +147,64 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
   margin-top: 40px;
 }
 
+/* 下層ページの見出し */
+.page-heading{
+  font-size: 16px;
+  margin-top: 55px;
+  letter-spacing: 0.1em;
+  line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* 下層ページのリード文 */
+.page-lead{
+  font-size: 12px;
+  max-width: 600px;
+  margin: 40px auto 0;
+}
+
+/* パンクズ */
+.breadcrumbs{
+  margin-top: 20px;
+
+  &__inner{
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &__item{
+    margin-left: 10px;
+    letter-spacing: 0.2em;
+    font-size: 10px;
+    transform: scale(0.8);
+    font-weight: 700;
+
+    &.--light{
+      color:#7B7B7B;
+    }
+  }
+  
+  &__arrow{
+    &::after{
+      content: '';
+      display: inline-block;
+      position: relative;
+      top: -1px;
+      width: 4px;
+      height: 4px;
+      border-top: 1px solid #707070;
+      border-right: 1px solid #707070;
+      transform: rotate(45deg);
+    }
+  }
+}
+
+.page-mv{
+  margin-left: calc(50% - 50vw);
+}
+
 /* 画像の注釈 */
 .image-desc{
   color: #9A9191;
@@ -152,7 +212,6 @@ header,main,section,footer, div, ul, li, h1,h2,h3,dl,dt,dd{
   margin-top: 30px;
   line-height: 1;
 }
-
 
 /*----- ボタン関連-----*/
 .btn{
@@ -270,6 +329,10 @@ section{
   padding: 50px 0;
 }
 
+.mt10{
+  margin-top: 10px;
+}
+
 .mt40 {
   margin-top: 40px;
 }
@@ -289,7 +352,6 @@ section{
 .sp-none{
   display: none;
 }
-
 
 /* サイトタイトル */
 .site-title{
@@ -319,13 +381,16 @@ section{
   .jp{
     font-size: 11px;
     transform: scale(1);
-    margin-left: 10px;
   }
 
   /* Topページの見出し */
   .top-page-heading{
     font-size: 17px;
     padding-bottom: 18px;
+
+    .jp{
+      margin-left: 10px;
+    }
   }
 
   /* Topページの見出しの下のheading */
@@ -338,6 +403,37 @@ section{
   .top-page_desc{
     font-size: 15px;
     margin-top: 45px;
+  }
+
+  /* 下層ページの見出し */
+  .page-heading{
+    font-size: 22px;
+    margin-top: 50px;
+  }
+
+  /* 下層ページのリード文 */
+  .page-lead{
+    font-size: 16px;
+  }
+
+  /* パンクズ */
+  .breadcrumbs{
+    margin-top: 30px;
+
+    &__item{
+      margin-left: 20px;
+      letter-spacing: 0.1em;
+      font-size: 11px;
+      transform: scale(1);
+    }
+    
+    &__arrow{
+      &::after{
+        top: -1px;
+        width: 5px;
+        height: 5px;
+      }
+    }
   }
 
   /* 画像の注釈 */
@@ -479,7 +575,7 @@ section{
   .header{
   
     &__wrap{
-      padding: 50px 70px 0;
+      padding: 50px 70px;
     }
   }
 
@@ -923,9 +1019,9 @@ section{
 }
 
 /* -------------------------------------------- */
-/* top-cta */
+/* cta */
 /* -------------------------------------------- */
-.top-cta{
+.cta{
   &__image{
     width: 58%;
     display: block;
@@ -947,7 +1043,7 @@ section{
 }
 
 @media (min-width: 765px) {
-  .top-cta{
+  .cta{
     max-width: 708px;
     margin: 0 auto;
     &__image{
